# handbook

./: .gitignore  .python-version  HANDBOOK_SETUP.md  README.md  mkdocs.ci.yml  mkdocs.yml  pyproject.toml  temp.md  temp_pcasm.md
.cursor/rules/: always-core-operating-rule.mdc  debug-instructions.mdc  styleguide.mdc  testing-conventions.mdc
.github/workflows/: ci.yml  gh-pages.yml
docs/: index.md  index.rst
docs/_build/html/: .buildinfo  genindex.html  getting_started.html  index.html
docs/assets/: brand.css
docs/assets/js/: env.js  mathjax.js
docs/business/: index.md
docs/company/: communication.md  how-we-hire.md  mission.md  okrs.md  organization.md  product-principles.md  saas-tools.md  technical-strategy.md  third-party-tools.md  tools.md  values.md
docs/eng/: architecture.md
docs/eng/overview/: pcasm.md
docs/engineering/: index.md  mbodi-architecture.html
docs/finance/: index.md
docs/legal/: index.md
docs/ops/: index.md
docs/overview/: communication.md  how-we-hire.md  okrs.md  technical-strategy.md  values.md
docs/people/: index.md
docs/research/: dominant-approaches.md  index.md
docs/security/: index.md
handbook/: __about__.py
handbook.egg-info/: PKG-INFO  SOURCES.txt
scripts/: supabase_login.sh
site/: 404.html  index.html
site/_templates/: module.rst
site/business/: index.html
site/engineering/: index.html
site/finance/: index.html
site/legal/: index.html
site/ops/: index.html
site/people/: index.html
site/research/: index.html
site/search/: search_index.json
site/security/: index.html
(+38 files in other folders)
